corrected responsiveness on ie11

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+html,
+body {
+  height: 100%;
+}
+
 html {
   color: rgb(61, 61, 61);
   font-size: 1em;
@@ -117,7 +122,6 @@ footer {
 
 .padded {
   padding: 10px 20px 10px 20px;
-  overflow: hidden;
 }
 
 .rounded-corners {
@@ -131,6 +135,20 @@ footer {
   border-radius: 5px;
 }
 
+.margin-header {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.margin-footer {
+  margin-top: 5px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .margin-all {
   margin: 20px;
 }
@@ -140,7 +158,7 @@ footer {
 }
 
 .margin-bottom {
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .margin-left {
@@ -165,8 +183,6 @@ footer {
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-
-  position: relative
 }
 
 .shadow-hover:hover {
@@ -235,16 +251,15 @@ footer {
   text-align: center;
 }
 
-.nav li.mobile-button>a{
- display: table-cell;
-  width: auto;
+.nav li.mobile-button>a {
+  display: table-cell;
   height: 60px;
   width: 60px;
   vertical-align: middle;
   text-align: center;
 }
 
-.nav > ul{
+.nav>ul {
   height: 60px;
 }
 
@@ -313,10 +328,6 @@ footer {
   -moz-box-shadow: 0 3px 29px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.23), inset 0px 20px 25px -25px rgba(0, 0, 0, 0.75);
 }
 
-.nav li ul li {
-  width: auto;
-}
-
 .nav li ul a {
   border: none;
   color: white;
@@ -355,7 +366,25 @@ footer {
 
 .center {
   display: flex;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   align-items: center;
+}
+
+.text {
+  word-wrap: break-word;
+}
+
+.center-image {
+  text-align: center;
+}
+
+.crest-style {
+  text-decoration: none;
+}
+
+.icon:hover {
+  color: #70a1c9;
 }
 
 /* ==========================================================================
@@ -374,67 +403,117 @@ footer {
    Flexboxes
    ========================================================================== */
 
-.row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+.center-flex {
   display: flex;
-  flex-direction: row;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
-}
-
-.column {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-}
-
-.left-column {
-  background-color: white;
-  min-height: 100px;
-  -webkit-transition:1s all;
-	-moz-transition:1s all;
-	-ms-transition:1s all;
-	transition:1s all;
-	overflow:hidden;
-}
-
-.right-column {
-  background-color: white;
-  min-height: 100px;
-  -webkit-transition:1s all;
-	-moz-transition:1s all;
-	-ms-transition:1s all;
-	transition:1s all;
-	overflow:hidden;
+  -ms-flex-wrap: wrap;
 }
 
 .container {
-  display: -webkit-box;
+  -webkit-transition: 1s all;
+  -moz-transition: 1s all;
+  -ms-transition: 1s all;
+  transition: 1s all;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+
+
+}
+
+.flex-container {
+
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+
+  padding: 10px;
+
+  -webkit-transition: 1s all;
+  -moz-transition: 1s all;
+  -ms-transition: 1s all;
+  transition: 1s all;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+
+  -ms-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+
+
+}
+
+.flex-row {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
   flex-direction: column;
 }
 
-.container .left-column,
-.container .right-column {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+.item {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+
+  margin: 10px;
+  background-color: white;
+
+  padding: 5px 20px 5px 20px;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
+.item:hover {
+  box-shadow: 0 3px 29px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 3px 29px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0 3px 29px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.who {
+  order: 0;
+  -ms-flex-order: 0;
+}
+
+.mission {
+  order: 1;
+  -ms-flex-order: 1;
+}
+
+.values {
+  order: 2;
+  -ms-flex-order: 2;
+}
+
+.about {
+  order: 3;
+  -ms-flex-order: 3;
 }
 
 /* ==========================================================================
@@ -526,6 +605,26 @@ footer {
    Modify as content requires.
    ========================================================================== */
 
+@media only screen and (max-width: 900px) {
+
+  .flex-container {
+    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-basis: 100% !important;
+
+  }
+
+  .item{
+    flex-basis: 100% !important;
+  }
+
+  .container{
+    flex-basis: 100% !important;
+  }
+
+}
+
+
 @media only screen and (max-width: 620px) {
 
   /* 
@@ -555,21 +654,18 @@ footer {
     right: 0;
   }
 
-  .row {
-    flex-direction: column;
+
+  .container {
+    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
   }
 
-  .container>.row>.column>.left-column {
-    margin-bottom: 20px;
-  }
+
+
 }
 
 
 @media only screen and (min-width: 620px) {
-
-  .container>.row>.column#left {
-    margin-right: 20px;
-  }
 
   /* 
     Style adjustments for viewports that meet the condition
